--- a/store.css
+++ b/store.css
@@ -1,55 +1,87 @@
 body {
-  font: small/1.6em Verdana, Helvetica, Arial, sans-serif;
+  font:                small/1.6em Verdana, Helvetica, Arial, sans-serif;
 }
 
 h1, h2 {
-  color: #007e7e;
+  color:               #007e7e;
 }
 
 h1 {
-  font-size: 150%;
+  font-size:           150%;
 }
 
 h2 {
-  font-size:130%;
+  font-size:           130%;
 }
 
-.guarantee {
-  border-color: white;
-  border-width: 1px;
-  border-style: dashed;
-
-  margin: 30px;
-  padding: 25px;
-  padding-left: 80px;
-  margin-right: 150px;
-
-  background-color: #a7cece;
-  background-image: url(./images/background.gif);
-  background-repeat: no-repeat;
-  background-position: top-left;
-
-  line-height: 1.9em;
-  font-style: italic;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: black;
+#guarantee {
+  line-height:         1.9em;
+  font-style:          italic;
+  font-family:         Georgia, "Times New Roman", Times, serif;
+  color:               #444444;
+  border:              1px dashed white;
+  padding:             25px;
+  padding-left:        80px;
+  margin:              30px;
+  margin-right:        250px;
+  background:    	   top left url(images/background.gif) no-repeat #a7cece;
 }
 
-#weeklyspecials {
-  border-width: thin;
-  border-style: solid;
-  border-color: #007e7e;
+#deals {
+  border:              thin solid #007e7e;
+  width:               200px;
 
-  width: 25%;
-  padding: 0px 20px 30px 10px
-  margin-left: 20px;
+  padding:             0px 20px 20px 20px;
 
-  text-align: center;
+  margin-left:         20px;
 
-  float:right;
+  text-align:          center;
+  
+  background:    	   url("images/mac.jpg") repeat-x;
+  float:               right;
+  line-height:         1;
 }
 
-#maincontent {
-  float:left;
-  width:70%;
+#deals h2 {
+  color:               black;
+}
+
+#deals h3 {
+  color:               #d12c47;
+}
+
+#footer {
+  font-size:           50%;
+  text-align:          center;
+  line-height:         normal;
+  margin-top:          30px;
+}
+
+.cd {
+  font-style:          italic;
+}
+
+.artist {
+  font-weight:         bold;
+}
+
+a:link {
+  color:               #007e7e;
+}
+
+a:visited {
+  color:               #333333;
+}
+
+#deals a:link {
+  color:               #007e7e;
+}
+
+#deals a:visited {
+  color:               #333333;
+}
+
+#deals a:hover {
+  background:          #f88396;
+  color:               #0d5353;
 }
