--- a/store.css
+++ b/store.css
@@ -1,87 +1,96 @@
 body {
-  font:                small/1.6em Verdana, Helvetica, Arial, sans-serif;
+  font: small/1.6em Verdana, Helvetica, Arial, sans-serif;
 }
 
 h1, h2 {
-  color:               #007e7e;
+  color: #007e7e;
 }
 
 h1 {
-  font-size:           150%;
+  font-size: 150%;
 }
 
 h2 {
-  font-size:           130%;
+  font-size:130%;
 }
 
-#guarantee {
-  line-height:         1.9em;
-  font-style:          italic;
-  font-family:         Georgia, "Times New Roman", Times, serif;
-  color:               #444444;
-  border:              1px dashed white;
-  padding:             25px;
-  padding-left:        80px;
-  margin:              30px;
-  margin-right:        250px;
-  background:    	   top left url(images/background.gif) no-repeat #a7cece;
+.guarantee {
+  border-color: white;
+  border-width: 1px;
+  border-style: dashed;
+
+  margin: 30px;
+  padding: 25px;
+  padding-left: 80px;
+  margin-right: 150px;
+
+  background-color: #a7cece;
+  background-image: url(./images/background.gif);
+  background-repeat: no-repeat;
+  background-position: top-left;
+
+  line-height: 1.9em;
+  font-style: italic;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: black;
 }
 
-#deals {
-  border:              thin solid #007e7e;
-  width:               200px;
+#weeklyspecials {
+  border-width: thin;
+  border-style: solid;
+  border-color: #007e7e;
 
-  padding:             0px 20px 20px 20px;
+  width: 25%;
+  padding: 0px 20px 30px 10px
+  margin-left: 20px;
 
-  margin-left:         20px;
+  text-align: center;
 
-  text-align:          center;
-  
-  background:    	   url("images/mac.jpg") repeat-x;
-  float:               right;
-  line-height:         1;
+  float:right;
 }
 
-#deals h2 {
-  color:               black;
+#maincontent {
+  float:left;
+  width:70%;
 }
-
-#deals h3 {
-  color:               #d12c47;
+#navigation
+{  
+  width: 100%;
+  float: left;  
 }
-
-#footer {
-  font-size:           50%;
-  text-align:          center;
-  line-height:         normal;
-  margin-top:          30px;
+ol#menu
+{
+  height: 2em;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-
-.cd {
-  font-style:          italic;
+ol#menu li 
+{
+  background: url(../img/tabs.gif);
+  float: left;
+  margin: 0 1px 0 0;
+  padding-left: 10px;
+  //border: dashed thin;
 }
-
-.artist {
-  font-weight:         bold;
+ol#menu a 
+{
+  background: url(../img/tabs.gif) 100% 0;
+  color: #008;
+  float: left;
+  line-height: 2em;
+  padding-right: 10px;
+  text-decoration: none;
+  //border: dashed thin;
 }
-
-a:link {
-  color:               #007e7e;
+ol#menu li.current 
+{
+    background-color: #48f;
+    background-position: 0 -60px;
 }
-
-a:visited {
-  color:               #333333;
-}
-
-#deals a:link {
-  color:               #007e7e;
-}
-
-#deals a:visited {
-  color:               #333333;
-}
-
-#deals a:hover {
-  background:          #f88396;
-  color:               #0d5353;
+ol#menu li.current a 
+{
+    background-position: 100% -60px;
+    color: #fff;
+    font-weight: bold;
 }
